--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.astraegis.com",
+  "homepage": "https://astraegis.com",
   "name": "astraegis",
   "version": "0.1.0",
   "private": true,
